# Betrock

./: .gitignore  BACKGROUND.md  Betrock.desktop  BetrockViewer.desktop  CMakeLists.txt  README.md  TODO.md  build_appimage.sh  build_releases.sh  imgui.ini
src/: global.h  main.cpp  version.h
src/include/: nbt.h
src/model/: chunkBuilder.cpp  chunkMesh.h  model.cpp
src/render/: camera.cpp  camera.h  mesh.cpp
src/world/: blockProperties.cpp  chunk.h  region.h  world.cpp  world.h
src/world/loaders/: alphaLoader.cpp  alphaLoader.h  indevLoader.cpp  indevLoader.h  regionLoader.cpp  regionLoader.h  worldLoader.cpp  worldLoader.h
